--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ NEXT_PUBLIC_GA4_MEASUREMENT_ID=
 
 # Backend (Render)
 PORT=8080
+PUBLIC_API_URL=https://fileswift-backend.onrender.com
 MAX_UPLOAD_FILES=100
 MAX_UPLOAD_FILESIZE=104857600
 STORAGE_PROVIDER=r2
