--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,7 @@
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-dropzone": "^14.3.8",
+        "react-easy-crop": "^5.5.6",
         "tailwind-merge": "^2.6.0"
     },
     "devDependencies": {
