--- a/android-build/twa-manifest.json
+++ b/android-build/twa-manifest.json
@@ -4,13 +4,13 @@
   "name": "FileSwift",
   "launcherName": "FileSwift",
   "display": "standalone",
-  "themeColor": "#2563EB",
+  "themeColor": "#0F172A",
   "themeColorDark": "#000000",
-  "navigationColor": "#2563EB",
+  "navigationColor": "#0F172A",
   "navigationColorDark": "#000000",
   "navigationDividerColor": "#000000",
   "navigationDividerColorDark": "#000000",
-  "backgroundColor": "#2563EB",
+  "backgroundColor": "#0F172A",
   "enableNotifications": true,
   "startUrl": "/",
   "iconUrl": "https://fileswift-web.vercel.app/icons/icon-512x512.png",
@@ -20,7 +20,7 @@
     "alias": "android"
   },
   "appVersionName": "1.0.2",
-  "appVersionCode": 5,
+  "appVersionCode": 6,
   "shortcuts": [],
   "generatorApp": "bubblewrap-cli",
   "webManifestUrl": "https://fileswift-web.vercel.app/manifest.webmanifest",
