style(ux): implement hybrid splash screen (blue launch -> dark app)

--- a/android-build/twa-manifest.json
+++ b/android-build/twa-manifest.json
@@ -10,17 +10,18 @@
   "navigationColorDark": "#000000",
   "navigationDividerColor": "#000000",
   "navigationDividerColorDark": "#000000",
-  "backgroundColor": "#0F172A",
+  "backgroundColor": "#2563EB",
   "enableNotifications": true,
   "startUrl": "/",
   "iconUrl": "https://fileswift-web.vercel.app/icons/icon-512x512.png",
+  "maskableIconUrl": "https://fileswift-web.vercel.app/icons/icon-512x512.png",
   "splashScreenFadeOutDuration": 300,
   "signingKey": {
     "path": "./android.keystore",
     "alias": "android"
   },
   "appVersionName": "1.0.2",
-  "appVersionCode": 6,
+  "appVersionCode": 8,
   "shortcuts": [],
   "generatorApp": "bubblewrap-cli",
   "webManifestUrl": "https://fileswift-web.vercel.app/manifest.webmanifest",
