chore(ads): add ads.txt verification file and update env example

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -17,6 +17,9 @@ S3_SECRET_ACCESS_KEY=
 
 # Upload Limits & Cleanup
 MAX_UPLOAD_SIZE_MB=200
+
+# AdSense (Google Ads)
+NEXT_PUBLIC_ADSENSE_CLIENT_ID="ca-pub-5583723279396814"
 TTL_UPLOAD_SECONDS=3600
 
 # AI Configuration
