chore: configure fileswift.in and google verification

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -3,7 +3,7 @@
 NEXT_PUBLIC_API_URL=http://localhost:8080/api
 
 # Site URL (Canonical)
-NEXT_PUBLIC_APP_URL=https://fileswift.com
+NEXT_PUBLIC_APP_URL=https://fileswift.in
 
 # Analytics & Ads
 NEXT_PUBLIC_GA4_MEASUREMENT_ID=G-XXXXXXXXXX
