--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
         "@headlessui/react": "^2.2.9",
         "@tanstack/react-query": "^5.0.0",
         "@vercel/analytics": "^1.6.1",
+        "@vercel/speed-insights": "^1.3.1",
         "clsx": "^2.1.1",
         "framer-motion": "^11.18.2",
         "lucide-react": "^0.330.0",
