docs: add PDF_COMPRESSION_TIMEOUT_MS to env example

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -16,7 +16,9 @@ S3_ACCESS_KEY_ID=
 S3_SECRET_ACCESS_KEY=
 
 # Upload Limits & Cleanup
+# Upload Limits & Cleanup
 MAX_UPLOAD_SIZE_MB=200
+PDF_COMPRESSION_TIMEOUT_MS=60000 # 60 seconds
 
 # AdSense (Google Ads)
 NEXT_PUBLIC_ADSENSE_CLIENT_ID="ca-pub-5583723279396814"
