fix(backend): harden pdf compression & add dommatrix polyfill
- Implemented global DOMMatrix polyfill in index.ts
- Refactored file.ts for deterministic compression (GS -> QPDF -> Original)
- Added 30s timeouts and strict size sanity checks
- Removed unsafe parallel compression logic
- Added stress test and smoke check scripts

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,10 @@ pnpm-debug.log*
 # Editor
 .vscode
 .idea
+# Test Assets
+scripts/test-assets
+scripts/stress-assets
+
+# Uploads
+apps/backend/uploads
+uploads
