feat(prod-readiness): Harden security, reliability, and UX for production launch
- Security: Implement magic bytes validation, Redis rate limiting (fail-open), and secure headers
- Reliability: Add worker sandboxing, concurrency limits, and deep /health checks
- UX: Add progress tracking, file stats, and retry mechanism
- Legal: Add Privacy Policy, Terms, Contact, and About pages
- Testing: Add k6-style load test scripts and verify 100-file concurrent upload stability

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # Dependencies
 node_modules
 .pnpm-store
@@ -26,6 +27,13 @@ pnpm-debug.log*
 # Test Assets
 scripts/test-assets
 scripts/stress-assets
+scripts/test-data
+debug-assets/
+dummy.pdf
+test-assets/
+stress-assets/
+apps/backend/backend.log
+apps/backend/logs/
 
 # Uploads
 apps/backend/uploads
