--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -13,6 +13,7 @@
         "@aws-sdk/client-s3": "^3.500.0",
         "@aws-sdk/s3-request-presigner": "^3.500.0",
         "@fastify/cors": "^9.0.0",
+        "@fastify/helmet": "^11.1.1",
         "@fastify/multipart": "^8.0.0",
         "@fastify/swagger": "^8.12.0",
         "@fastify/swagger-ui": "^2.0.0",
