--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "k6": "^0.0.0",
     "pdf-lib": "^1.17.1",
     "prettier": "^3.0.0",
+    "sharp": "^0.34.5",
     "typescript": "^5.0.0"
   },
   "engines": {
