fix: run compiled js in production to support sandboxed workers

--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -36,4 +36,4 @@ RUN pnpm --filter backend build
 EXPOSE 8080
 
 # Start
-CMD ["pnpm", "--filter", "backend", "start"]
+CMD ["pnpm", "--filter", "backend", "run", "start:prod"]
