fix: restore package.json structure

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -2,34 +2,48 @@
     "name": "backend",
     "version": "0.0.0",
     "private": true,
-    "@fastify/swagger": "^8.12.0",
-    "@fastify/swagger-ui": "^2.0.0",
-    "@fileswift/utils": "workspace:*",
-    "@types/fs-extra": "^11.0.4",
-    "@types/pdf-parse": "^1.1.5",
-    "archiver": "^7.0.1",
-    "axios": "^1.13.2",
-    "bullmq": "^5.0.0",
-    "docx": "^9.5.1",
-    "dotenv": "^16.4.0",
-    "fastify": "^4.26.0",
-    "fastify-plugin": "^4.5.0",
-    "fs-extra": "^11.3.2",
-    "ioredis": "^5.3.0",
-    "openai": "^6.10.0",
-    "pdf-lib": "^1.17.1",
-    "pdf-parse": "^2.4.5",
-    "replicate": "^1.4.0",
-    "sharp": "^0.34.5",
-    "tree-kill": "^1.2.2",
-    "uuid": "^13.0.0",
-    "zod": "^3.22.0"
-},
-"devDependencies": {
-    "@types/archiver": "^7.0.0",
-    "@types/node": "^20.0.0",
-    "eslint": "^8.0.0",
-    "tsx": "^4.7.0",
-    "typescript": "^5.0.0"
-}
+    "scripts": {
+        "dev": "tsx watch src/index.ts",
+        "build": "tsc",
+        "start": "tsx src/index.ts",
+        "start:prod": "node dist/index.js",
+        "lint": "eslint .",
+        "test:smoke": "tsx scripts/verify-all.ts"
+    },
+    "dependencies": {
+        "@aws-sdk/client-s3": "^3.500.0",
+        "@aws-sdk/s3-request-presigner": "^3.500.0",
+        "@fastify/cors": "^9.0.0",
+        "@fastify/helmet": "^11.1.1",
+        "@fastify/multipart": "^8.0.0",
+        "@fastify/swagger": "^8.12.0",
+        "@fastify/swagger-ui": "^2.0.0",
+        "@fileswift/utils": "workspace:*",
+        "@types/fs-extra": "^11.0.4",
+        "@types/pdf-parse": "^1.1.5",
+        "archiver": "^7.0.1",
+        "axios": "^1.13.2",
+        "bullmq": "^5.0.0",
+        "docx": "^9.5.1",
+        "dotenv": "^16.4.0",
+        "fastify": "^4.26.0",
+        "fastify-plugin": "^4.5.0",
+        "fs-extra": "^11.3.2",
+        "ioredis": "^5.3.0",
+        "openai": "^6.10.0",
+        "pdf-lib": "^1.17.1",
+        "pdf-parse": "^2.4.5",
+        "replicate": "^1.4.0",
+        "sharp": "^0.34.5",
+        "tree-kill": "^1.2.2",
+        "uuid": "^13.0.0",
+        "zod": "^3.22.0"
+    },
+    "devDependencies": {
+        "@types/archiver": "^7.0.0",
+        "@types/node": "^20.0.0",
+        "eslint": "^8.0.0",
+        "tsx": "^4.7.0",
+        "typescript": "^5.0.0"
+    }
 }
