--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -8,7 +8,8 @@
         "start": "tsx src/index.ts",
         "start:prod": "node dist/index.js",
         "lint": "eslint .",
-        "test:smoke": "tsx scripts/verify-all.ts"
+        "test:smoke": "tsx scripts/verify-all.ts",
+        "verify": "tsx scripts/verify-build.ts"
     },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.500.0",
