--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,7 +6,7 @@
         "dev": "tsx watch src/index.ts",
         "build": "tsc",
         "start": "tsx src/index.ts",
-        "start:prod": "node dist/src/index.js",
+        "start:prod": "node dist/index.js",
         "lint": "eslint .",
         "test:smoke": "tsx scripts/verify-all.ts",
         "verify": "tsx scripts/verify-build.ts"
