--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -4,6 +4,7 @@
         "src"
     ],
     "compilerOptions": {
+        "rootDir": "src",
         "outDir": "dist",
         "noEmit": false
     }
