fix: switch to CommonJS and remove ESM-only syntax to fix worker crash

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -4,6 +4,10 @@
         "src"
     ],
     "compilerOptions": {
+        "module": "CommonJS",
+        "moduleResolution": "Node",
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
         "rootDir": "src",
         "outDir": "dist",
         "noEmit": false
