--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "scripts": {
         "dev": "tsx watch src/index.ts",
-        "build": "tsc",
+        "build": "rm -rf dist && tsc",
         "start": "tsx src/index.ts",
         "start:prod": "node dist/index.js",
         "lint": "eslint .",
