--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -37,7 +37,7 @@
         "replicate": "^1.4.0",
         "sharp": "^0.34.5",
         "tree-kill": "^1.2.2",
-        "uuid": "^13.0.0",
+        "uuid": "9.0.1",
         "zod": "^3.22.0"
     },
     "devDependencies": {
