--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -43,6 +43,7 @@
     "devDependencies": {
         "@types/archiver": "^7.0.0",
         "@types/node": "^20.0.0",
+        "@types/uuid": "^11.0.0",
         "eslint": "^8.0.0",
         "tsx": "^4.7.0",
         "typescript": "^5.0.0"
