--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
         "@fileswift/ui": "workspace:*",
         "@fileswift/utils": "workspace:*",
         "@headlessui/react": "^2.2.9",
+        "@tailwindcss/typography": "^0.5.19",
         "@tanstack/react-query": "^5.0.0",
         "@vercel/analytics": "^1.6.1",
         "@vercel/speed-insights": "^1.3.1",
@@ -24,7 +25,9 @@
         "react-dom": "^18.0.0",
         "react-dropzone": "^14.3.8",
         "react-image-crop": "^11.0.10",
-        "tailwind-merge": "^2.6.0"
+        "react-markdown": "^10.1.0",
+        "tailwind-merge": "^2.6.0",
+        "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
         "@types/node": "^20.0.0",
