--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,8 +5,8 @@
     "scripts": {
         "dev": "tsx watch src/index.ts",
         "build": "rm -rf dist && tsc -p tsconfig.prod.json",
-        "start": "tsx src/index.ts",
-        "start:prod": "node dist/index.js",
+        "start": "node dist/index.js",
+        "start:dev": "tsx src/index.ts",
         "lint": "eslint .",
         "test:smoke": "tsx scripts/verify-all.ts",
         "verify": "tsx scripts/verify-build.ts"
