--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.500.0",
+        "@aws-sdk/lib-storage": "^3.952.0",
         "@aws-sdk/s3-request-presigner": "^3.500.0",
         "@fastify/cors": "^9.0.0",
         "@fastify/helmet": "^11.1.1",
