fix: enable inline job processing to fix mobile upload failures
- Add USE_MOCK_QUEUE=true to Dockerfile to ensure jobs process in-process
- This fixes the 'All input files missing' error on mobile uploads
- Jobs now run in the same process that handles uploads, guaranteeing file access
- Added debug logging and retry mechanism for file access issues

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -29,5 +29,7 @@ OPENAI_API_KEY=
 REPLICATE_API_TOKEN=
 
 # Job Queue
-# If empty, uses in-memory mock queue. For production use proper Redis URL.
+# USE_MOCK_QUEUE=true processes jobs inline (recommended for single-instance deployments)
+# If false and REDIS_URL is set, uses BullMQ with Redis (requires shared filesystem between workers)
+USE_MOCK_QUEUE=true
 REDIS_URL=
