--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -22,6 +22,7 @@
         "@fastify/swagger-ui": "^2.0.0",
         "@fileswift/utils": "workspace:*",
         "@types/fs-extra": "^11.0.4",
+        "@types/jszip": "^3.4.1",
         "@types/pdf-parse": "^1.1.5",
         "archiver": "^7.0.1",
         "axios": "^1.13.2",
@@ -32,9 +33,11 @@
         "fastify-plugin": "^4.5.0",
         "fs-extra": "^11.3.2",
         "ioredis": "^5.3.0",
+        "jszip": "^3.10.1",
         "openai": "^6.10.0",
         "pdf-lib": "^1.17.1",
         "pdf-parse": "^2.4.5",
+        "pdf2json": "^4.0.0",
         "replicate": "^1.4.0",
         "sharp": "^0.34.5",
         "tree-kill": "^1.2.2",
