fix: SEO indexing issues - canonical URLs, sitemap, redirects
- Update all canonical and OpenGraph URLs to use www.fileswift.in consistently
- Add /tools page to sitemap with 0.9 priority
- Add permanent redirect for /bulk-image-resizer -> /tools/bulk-image-resizer
- Remove empty legacy folders (image-resizer, image-compressor, bulk-image-resizer)
- Fix React type version conflicts with pnpm overrides
- Add explicit JSX.Element return types to fix TypeScript errors

--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
       "msgpackr-extract",
       "@parcel/watcher",
       "unrs-resolver"
-    ]
+    ],
+    "overrides": {
+      "@types/react": "18.2.79",
+      "@types/react-dom": "18.2.25"
+    }
   },
   "dependencies": {
     "pnpm": "^10.25.0"
