--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,8 +31,8 @@
     },
     "devDependencies": {
         "@types/node": "^20.0.0",
-        "@types/react": "^18.0.0",
-        "@types/react-dom": "^18.0.0",
+        "@types/react": "18.2.79",
+        "@types/react-dom": "18.2.25",
         "autoprefixer": "^10.0.1",
         "eslint": "^8.0.0",
         "eslint-config-next": "14.1.0",
