--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,8 +16,10 @@
         "@tanstack/react-query": "^5.0.0",
         "@vercel/analytics": "^1.6.1",
         "@vercel/speed-insights": "^1.3.1",
+        "browser-image-compression": "^2.0.2",
         "clsx": "^2.1.1",
         "framer-motion": "^11.18.2",
+        "jszip": "^3.10.1",
         "lucide-react": "^0.330.0",
         "next": "14.1.0",
         "next-themes": "^0.4.6",
@@ -30,6 +32,7 @@
         "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
+        "@types/inquirer": "^9.0.9",
         "@types/node": "^20.0.0",
         "@types/react": "18.2.79",
         "@types/react-dom": "18.2.25",
