feat: implement Phase 1 SEO & AdSense strategy (blog, technical SEO, ads)

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ NEXT_PUBLIC_ADSENSE_CLIENT=
 NEXT_PUBLIC_ADSENSE_LOAD_CONSENT_REQUIRED=true
 NEXT_PUBLIC_GA4_MEASUREMENT_ID=
 
+# AI Integration (Grok/xAI)
+XAI_API_KEY=
+
 # Backend (Render)
 PORT=8080
 PUBLIC_API_URL=https://fileswift-backend.onrender.com
