--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,10 +19,14 @@
         "browser-image-compression": "^2.0.2",
         "clsx": "^2.1.1",
         "framer-motion": "^11.18.2",
+        "is-extglob": "^2.1.1",
         "jszip": "^3.10.1",
         "lucide-react": "^0.330.0",
         "next": "14.1.0",
         "next-themes": "^0.4.6",
+        "openai": "^6.10.0",
+        "pdf-lib": "^1.17.1",
+        "pdfjs-dist": "^5.4.530",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-dropzone": "^14.3.8",
