--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
         "@fileswift/ui": "workspace:*",
         "@fileswift/utils": "workspace:*",
         "@headlessui/react": "^2.2.9",
+        "@imgly/background-removal": "^1.7.0",
         "@tailwindcss/typography": "^0.5.19",
         "@tanstack/react-query": "^5.0.0",
         "@vercel/analytics": "^1.6.1",
@@ -20,13 +21,14 @@
         "clsx": "^2.1.1",
         "framer-motion": "^11.18.2",
         "is-extglob": "^2.1.1",
+        "jspdf": "^4.1.0",
         "jszip": "^3.10.1",
         "lucide-react": "^0.330.0",
         "next": "14.1.0",
         "next-themes": "^0.4.6",
         "openai": "^6.10.0",
         "pdf-lib": "^1.17.1",
-        "pdfjs-dist": "^5.4.530",
+        "pdfjs-dist": "^3.11.174",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-dropzone": "^14.3.8",
