--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -34,6 +34,7 @@
         "react-dropzone": "^14.3.8",
         "react-image-crop": "^11.0.10",
         "react-markdown": "^10.1.0",
+        "sharp": "^0.34.5",
         "tailwind-merge": "^2.6.0",
         "tailwindcss-animate": "^1.0.7"
     },
