--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -47,6 +47,7 @@
         "@types/react": "18.2.79",
         "@types/react-dom": "18.2.25",
         "autoprefixer": "^10.0.1",
+        "copy-webpack-plugin": "^13.0.1",
         "eslint": "^8.0.0",
         "eslint-config-next": "14.1.0",
         "postcss": "^8.0.0",
