--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,7 @@
         "browser-image-compression": "^2.0.2",
         "clsx": "^2.1.1",
         "framer-motion": "^11.18.2",
+        "heic2any": "^0.0.4",
         "is-extglob": "^2.1.1",
         "jspdf": "^4.1.0",
         "jszip": "^3.10.1",
