feat: implement Adsterra Social Bar monetization slot for BioGenie

--- a/apps/biogenie/env.example
+++ b/apps/biogenie/env.example
@@ -9,3 +9,6 @@ NEXT_PUBLIC_GA_ID=
 
 # Optional: Base URL for production
 NEXT_PUBLIC_BASE_URL=https://biogenie.in
+
+# Adsterra Script URL (provided by user)
+NEXT_PUBLIC_ADSTERRA_SCRIPT_URL=https://inspiredalarmslower.com/2d/57/4d/2d574d148901613740167fe89daba47a.js
