--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -36,6 +36,7 @@
         "react-image-crop": "^11.0.10",
         "react-markdown": "^10.1.0",
         "remark-gfm": "^4.0.1",
+        "sonner": "^2.0.7",
         "tailwind-merge": "^2.6.0",
         "tailwindcss-animate": "^1.0.7"
     },
