--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
         "@fileswift/utils": "workspace:*",
         "@headlessui/react": "^2.2.9",
         "@imgly/background-removal": "^1.7.0",
+        "@jspawn/qpdf-wasm": "^0.0.2",
         "@tailwindcss/typography": "^0.5.19",
         "@tanstack/react-query": "^5.0.0",
         "@vercel/analytics": "^1.6.1",
@@ -29,6 +30,7 @@
         "next-themes": "^0.4.6",
         "openai": "^6.10.0",
         "pdf-lib": "^1.17.1",
+        "pdf-lib-plus-encrypt": "^1.1.0",
         "pdfjs-dist": "^3.11.174",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
