--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
         "@headlessui/react": "^2.2.9",
         "@imgly/background-removal": "^1.7.0",
         "@jspawn/qpdf-wasm": "^0.0.2",
+        "@neslinesli93/qpdf-wasm": "^0.3.0",
         "@tailwindcss/typography": "^0.5.19",
         "@tanstack/react-query": "^5.0.0",
         "@vercel/analytics": "^1.6.1",
