fix: explicit install of @emotion/is-prop-valid for framer-motion SSR

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@emotion/is-prop-valid": "^1.4.0",
         "@fileswift/ui": "workspace:*",
         "@fileswift/utils": "workspace:*",
         "@headlessui/react": "^2.2.9",
